--- a/notebooks/01_poisson_1d.ipynb
+++ b/notebooks/01_poisson_1d.ipynb
@@ -44,8 +44,9 @@
     "    tol = 1e-12\n",
     "    D = np.where((np.abs(xnodes - 0.0) < tol) | (np.abs(xnodes - 1.0) < tol))[0]\n",
     "\n",
-    "# Apply Dirichlet BCs (u=0 at boundary) by condensation\n",
-    "Acond, bcond = condense(A, b, D=D)\n",
+    "# Apply Dirichlet BCs (u=0 at boundary) by condensation; some skfem versions return\n",
+    "# (A, b) while others include an auxiliary vector, so grab only the first two values.\n",
+    "Acond, bcond, *_ = condense(A, b, D=D)\n",
     "\n",
     "# Solve linear system for free DOFs\n",
     "u_free = np.linalg.solve(Acond, bcond)\n",
