--- a/notebooks/01_poisson_1d.ipynb
+++ b/notebooks/01_poisson_1d.ipynb
@@ -66,9 +66,8 @@
    "source": [
     "# Mesh and basis on [0, 1]\n",
     "n_intervals = 5   # 5 elements, 6 nodes\n",
-    "m = fem.MeshLine(np.linspace(0, 1, n_intervals + 1))\n",
-    "e = fem.ElementLineP1()\n",
-    "basis = fem.Basis(m, e)"
+    "mesh = fem.MeshLine(np.linspace(0, 1, n_intervals + 1))\n",
+    "V = fem.Basis(mesh, fem.ElementLineP1())"
    ]
   },
   {
@@ -98,7 +97,7 @@
     "# Define bilinear form: ∫ ∇u · ∇v dx\n",
     "@fem.BilinearForm\n",
     "def a(u, v, _):\n",
-    "    return grad(u)[0] * grad(v)[0]  # In 1D, grad is just du/dx\n",
+    "    return dot(grad(u), grad(v))  # In 1D, grad is just du/dx\n",
     "\n",
     "# Define linear form: ∫ f * v dx (where f = 1)\n",
     "@fem.LinearForm  \n",
@@ -128,8 +127,8 @@
    "outputs": [],
    "source": [
     "# Assemble stiffness and load for -u'' = 1\n",
-    "A = fem.asm(a, basis)\n",
-    "b = fem.asm(L, basis)\n",
+    "A = a.assemble(V)\n",
+    "b = L.assemble(V)\n",
     "\n",
     "print(f\"System size: {A.shape[0]} x {A.shape[1]}\")\n",
     "print(f\"Matrix type: {type(A)}\")\n",
@@ -163,7 +162,7 @@
    "outputs": [],
    "source": [
     "# Find boundary nodes (x=0 and x=1)\n",
-    "x = m.p[0]\n",
+    "x = mesh.p[0]\n",
     "boundary = np.where((np.abs(x) < 1e-12) | (np.abs(x - 1.0) < 1e-12))[0]\n",
     "print(f\"Boundary nodes: {boundary} (at x = {x[boundary]})\")\n",
     "\n",
