--- a/notebooks/02_heat_2d.ipynb
+++ b/notebooks/02_heat_2d.ipynb
@@ -163,7 +163,7 @@
    "outputs": [],
    "source": [
     "# Get node coordinates\n",
-    "x, y = m.p[0], m.p[1]\n",
+    "x, y = mesh.p[0], mesh.p[1]\n",
     "\n",
     "# Find boundary nodes\n",
     "tol = 1e-12\n",
