--- a/notebooks/01_poisson_1d.ipynb
+++ b/notebooks/01_poisson_1d.ipynb
@@ -207,10 +207,6 @@
     "\n",
     "We compare our numerical solution with the analytical solution $u_{exact}(x) = \\frac{1}{2}x(1-x)$.\n",
     "\n",
-    "The error analysis helps us understand:\n",
-    "- How accurate our approximation is\n",
-    "- How the error decreases with mesh refinement (convergence)\n",
-    "\n",
     "With only 5 elements, we can clearly see the linear interpolation between nodes and compare it with the exact parabolic solution."
    ]
   },
@@ -221,12 +217,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exact solution and error analysis\n",
+    "# Exact solution\n",
     "u_exact = 0.5 * x * (1 - x)\n",
-    "err_inf = np.max(np.abs(u - u_exact))\n",
-    "h = 1.0 / n_intervals  # mesh size\n",
-    "print(f\"Mesh size h: {h:.3f}\")\n",
-    "print(f\"Infinity-norm error: {err_inf:.6f}\")\n",
     "\n",
     "# Plot solution comparison\n",
     "plt.figure(figsize=(8,5))\n",
@@ -258,9 +250,6 @@
     "#### 1. Mesh Refinement and Convergence Study\n",
     "Investigate how the error decreases with mesh refinement:\n",
     "- Change `n_intervals` to values like 10, 20, 40, 80, 160\n",
-    "- Plot the infinity-norm error vs. mesh size `h = 1/n_intervals` on a log-log scale\n",
-    "- **Expected result**: For P1 elements, error should decrease as O(h²)\n",
-    "- **Code hint**: Use `plt.loglog(h_values, errors)` to see the convergence rate\n",
     "\n",
     "#### 2. Mixed Boundary Conditions\n",
     "Implement one Dirichlet and one Neumann boundary condition:\n",
@@ -270,12 +259,6 @@
     "  ∫ u'v' dx = ∫ f v dx + [flux terms at boundaries]\n",
     "  ```\n",
     "- **Implementation**: Only modify the first boundary node (x=0) in the matrix, add flux to `b[-1]`\n",
-    "- **Code template**:\n",
-    "  ```python\n",
-    "  # Apply mixed BCs\n",
-    "  A_dense[0, :] = 0; A_dense[0, 0] = 1; b[0] = 0  # u(0) = 0\n",
-    "  b[-1] += 2  # -u'(1) = 2 (add flux, don't modify matrix)\n",
-    "  ```\n",
     "\n",
     "#### 3. Pure Neumann Problem\n",
     "What happens with only Neumann boundary conditions?\n",
