--- a/notebooks/02_heat_2d.ipynb
+++ b/notebooks/02_heat_2d.ipynb
@@ -358,49 +358,38 @@
     "\n",
     "**Key insight**: Neumann conditions appear naturally in the weak form and don't require matrix modification!\n",
     "\n",
-    "**Documentation**: See [scikit-fem Neumann conditions](https://scikit-fem.readthedocs.io/en/latest/examples/ex15.html) and [boundary integral example](https://scikit-fem.readthedocs.io/en/latest/examples/ex03.html)\n",
-    "\n",
-    "**Exercise 3a: Heat Flux on Right Edge**\n",
+    "**Heat Flux on Right Edge**\n",
     "- **Problem**: Dirichlet on left (u=1), Neumann on right (flux=-2), insulated top/bottom (flux=0)\n",
     "- **Implementation**:\n",
     "  ```python\n",
-    "  # Step 1: Modify the linear form to include boundary integrals\n",
-    "  @fem.LinearForm\n",
-    "  def L_with_neumann(v, w):\n",
-    "      return 0.0 * v  # No volume source\n",
-    "  \n",
-    "  # Step 2: Add boundary integral for Neumann condition\n",
-    "  # Create boundary basis for right edge\n",
-    "  right_boundary = mesh.boundary()  # Get boundary elements\n",
-    "  # Filter for right edge elements (x ≈ 1)\n",
-    "  right_elements = []\n",
-    "  for i, elem in enumerate(right_boundary):\n",
-    "      edge_coords = mesh.p[:, elem]\n",
-    "      if np.all(np.abs(edge_coords[0] - 1.0) < 1e-12):\n",
-    "          right_elements.append(i)\n",
-    "  \n",
-    "  # Create boundary basis and add flux integral\n",
-    "  if right_elements:\n",
-    "      boundary_mesh = mesh.boundary()\n",
-    "      boundary_basis = fem.Basis(boundary_mesh, fem.ElementLineP1())\n",
-    "      \n",
+    "  tol = 1e-12\n",
+    "\n",
+    "  # Assemble the standard volume contributions\n",
+    "  A = a.assemble(V)\n",
+    "  b = L.assemble(V)\n",
+    "\n",
+    "  # Step 1: pick the boundary facets with x ≈ 1\n",
+    "  right_facets = mesh.facets_satisfying(lambda pts: np.abs(pts[0] - 1.0) < tol)\n",
+    "\n",
+    "  # Step 2: create a FacetBasis on those facets\n",
+    "  if right_facets.size:\n",
+    "      fbasis = fem.FacetBasis(mesh, fem.ElementTriP1(), facets=right_facets)\n",
+    "\n",
     "      @fem.LinearForm\n",
-    "      def neumann_flux(v, w):\n",
-    "          return -2.0 * v  # Prescribed flux g = -2\n",
-    "      \n",
-    "      # Assemble boundary contribution\n",
-    "      b_neumann = neumann_flux.assemble(boundary_basis)\n",
-    "      \n",
-    "      # Add to main load vector (requires careful index mapping)\n",
-    "      # This is advanced - see scikit-fem documentation for details\n",
+    "      def neumann_flux(v, _):\n",
+    "          return -2.0 * v  # prescribed outward flux\n",
+    "\n",
+    "      # Step 3: add the boundary integral to the load vector\n",
+    "      b += neumann_flux.assemble(fbasis)\n",
+    "\n",
+    "  # Step 4: enforce Dirichlet data on the left edge as before\n",
+    "  A_dense = A.toarray()\n",
+    "  left = np.where(np.abs(x) < tol)[0]\n",
+    "  for i in left:\n",
+    "      A_dense[i, :] = 0\n",
+    "      A_dense[i, i] = 1\n",
+    "      b[i] = 1.0\n",
     "  ```\n",
-    "\n",
-    "\n",
-    "**Important Notes on Neumann Conditions**:\n",
-    "- Neumann conditions are \"natural\" - they're satisfied automatically in the weak form\n",
-    "- Only modify the load vector `b`, never the matrix `A` for Neumann conditions\n",
-    "- Pure Neumann problems may have non-unique solutions (need to pin one node)\n",
-    "- Proper implementation requires boundary element integration (see scikit-fem docs)\n",
     "\n",
     "#### 3. Heat Source Problems\n",
     "Add internal heat generation:\n",
@@ -416,22 +405,13 @@
     "    mesh = fem.MeshTri.init_tensor(np.linspace(0, 1, n+1), np.linspace(0, 1, n+1))\n",
     "    # Solve and compare solutions\n",
     "    # Plot temperature along centerline for different mesh sizes\n",
-    "```\n",
-    "\n",
-    "#### 5. Comparison with 1D Solution\n",
-    "**Key differences between 1D and 2D**:\n",
-    "- **Boundary complexity**: 1D has 2 points, 2D has 4 edges\n",
-    "- **Element types**: Line elements vs. triangular elements  \n",
-    "- **Gradient computation**: 1D derivative vs. 2D gradient vector\n",
-    "- **Visualization**: Line plots vs. contour/surface plots\n",
-    "- **System size**: 1D: O(n) unknowns, 2D: O(n²) unknowns\n",
-    "- **Matrix structure**: 1D tridiagonal, 2D has more complex sparsity pattern"
+    "```"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d08a2ad2-6cf2-4d98-a610-5fa63932ead4",
+   "id": "9659eceb-a01d-4e99-b015-52a89be0da49",
    "metadata": {},
    "outputs": [],
    "source": []
