--- a/notebooks/02_heat_2d.ipynb
+++ b/notebooks/02_heat_2d.ipynb
@@ -5,7 +5,7 @@
    "id": "3a9caf0c",
    "metadata": {},
    "source": [
-    "# Heat Equation in 2D with scikit-fem - **Student Exercise**\n",
+    "# Heat Equation in 2D with scikit-fem\n",
     "\n",
     "**Goal**: Apply your knowledge from the 1D Poisson problem to solve the 2D heat equation.\n",
     "\n",
@@ -407,14 +407,6 @@
     "    # Plot temperature along centerline for different mesh sizes\n",
     "```"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9659eceb-a01d-4e99-b015-52a89be0da49",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
