--- a/notebooks/03_demag_3d.ipynb
+++ b/notebooks/03_demag_3d.ipynb
@@ -106,7 +106,7 @@
    "id": "81a0164c",
    "metadata": {},
    "source": [
-    "## Step 4: Magnetization and Weak Forms (Your Turn)\n",
+    "## Step 4: Magnetization and Weak Forms - **YOUR TURN!**\n",
     "\n",
     "We prescribe the uniform magnetization vector\n",
     "\n",
@@ -132,12 +132,12 @@
     "# TODO: Implement the bilinear form a(u, v)\n",
     "@fem.BilinearForm\n",
     "def a(u, v, w):\n",
-    "    return _______  # replace with dot(grad(u), grad(v))\n",
+    "    return _______  # implement\n",
     "\n",
     "# TODO: Implement the linear form L(v)\n",
     "@fem.LinearForm\n",
     "def L(v, w):\n",
-    "    return _______  # replace with sample * dot(m, grad(v))"
+    "    return _______  # implement using sample * m to restrict the magnetization to the sample"
    ]
   },
   {
