--- a/notebooks/01_poisson_1d.ipynb
+++ b/notebooks/01_poisson_1d.ipynb
@@ -217,10 +217,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exact solution\n",
-    "u_exact = 0.5 * x * (1 - x)\n",
-    "\n",
     "# Plot solution comparison\n",
+    "x = np.linspace(0, 1, 6)\n",
     "plt.figure(figsize=(8,5))\n",
     "plt.plot(x, u, marker='o', markersize=8, label='FE (P1)', linewidth=2)\n",
     "\n",
